xfsprogs-4.2.0 (7 Sep 2015)
	- repair: fix crashes due to missing geometry pointer (Eric Sandeen)
	- repair: fix node handling on large attribute btrees (Brian Foster)
	- repair: attribute block header verification fixes (Darrick Wong)
	- libxfs: more error negation fixes (Darrick Wong)
	- libxfs: cancelled readahead buffer state initialisation fixes
	  (Darrick Wong)
	- build: include/xfs header path fix (Lucas Stach)

xfsprogs-4.2.0-rc3 (25 Aug 2015)
	- xfs_repair: directory verification fixes (Darrick Wong)
	- libxfs: errno negation fixes (Darrick Wong)
	- xfs_db: corrupt inode handling fixes (Darrick Wong)
	- repair: memory leak fixes (Eric Sandeen)
	- libxfs: directory corruption fix (Jan Kara)
	- libxfs: gcc miscompile fixes (Jan Kara)
	- libxfs: merge across bug fixes from 4.2 kernel code
	- man pages: minor updates (Eric Sandeen)

xfsprogs-4.2.0-rc2 (18 Aug 2015)
	- OS X build improvements (Jan Tulak)
	- libxfs: fix code miscompilation w/ gcc 4.8.3 (Jan Kara)
	- mkfs.xfs: default to using ftype=1 for all filesystems
	- mkfs.xfs: CLI options parsing order fix (Eric Sandeen)
	- xfs_repair: improve inode version checks (Roger Willcocks)
	- libxfs: remove excessive EXPERIMENTAL feature warnings
	  for sparse inodes (Brian Foster)
	- xfs_db: fix new gcc 4.9.3 build warnings

xfsprogs-4.2.0-rc1 (4 Aug 2015)
	- update libxfs to match kernel 4.2-rc1
	- libxfs and include restructuring to match kernel code
	- sparse inode support (Brian Foster)
	- Android build support (Ted Tso)
	- Mac OS X build fixes (Jan Tulak)
	- changing UUIDs on v5 filesystems (Eric Sandeen)
	- libxfs-apply script for keeping kernel/progs libxfs in sync
	  (Eric Sandeen)
	- lots of header and type cleanups (Christoph Hellwig)
	- libblkid now mandatory (Jan Tulak)
	- lots of bug fixes (Brian Foster, Eric Sandeen, Christoph Hellwig,
	  Mike Grant)

xfsprogs-3.2.4 (30 Jul 2015)
	- xfs_metadump: information leakage fixes (CVE-2012-2150) (Eric Sandeen)

xfsprogs-3.2.3 (10 Jun 2015)