@@ -1,3 +1,12 @@
+xfsprogs-4.3.0-rc1 (14 Oct 2015)
+	- xfs_io: reflink and dedupe operation support (Darrick Wong)
+	- xfs_db: blockget/blocktrash support for v5 filesystems
+	  (Darrick Wong)
+	- xfs_repair: many directory/attr cleanups and fixes (Eric Sandeen)
+	- More OS X build improvements (Jan Tulak)
+	- Log zeroing rework for v5 filesystems to prevent log sequence
+	  numbers from going backwards (Brain Foster)
+
 xfsprogs-4.2.0 (7 Sep 2015)
 	- repair: fix crashes due to missing geometry pointer (Eric Sandeen)
 	- repair: fix node handling on large attribute btrees (Brian Foster)
